...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uE2-NC-qEy" userLabel="LikeButton">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button off" label="like button off">
                                                        <accessibilityTraits key="traits" button="YES" image="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="HtX-3d-A0D"/>
                                                        <constraint firstAttribute="height" constant="44" id="m5s-GP-HNw"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="1UT-ey-zE5" id="efB-3Z-f5m"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LNg-Hi-YOC" userLabel="BackwardButton">
                                <rect key="frame" x="9" y="11" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white" label="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="9Yf-dK-Ap3"/>
                                    <constraint firstAttribute="height" constant="24" id="WQu-fD-K2l"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackwardIcon"/>
...
                                    <constraint firstAttribute="width" constant="60" id="eNI-pv-FW9"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PIa-hY-1CU" userLabel="AuthButton">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="colorWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate" label="Authenticate">
                                    <accessibilityTraits key="traits" button="YES"/>
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="9KZ-qd-c4c"/>
                                </constraints>
...
                                <color key="backgroundColor" name="colorWhite"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bCa-rr-zXa">
                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
                                <color key="tintColor" name="colorBlack"/>
                            </progressView>
...
