...
    func fetchProfileAvatarURL() -> URL? {
        return self.getProfileAvatarURL()
    }
    
    
    func logoutButtonTap() {
        alertService.showAlert(title: "Пока!", message: "Точно хотите выйти?", buttonConfirmTitle: "Да, ухожу", buttonDeclineTitle: "Нет, остаюсь")
    }
    
    func logout(){
        UIBlockingProgressHUD.show()
        profileLogoutService?.logout()
        let splashViewCotroller = SplashViewController()
...
